--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: haskell
 env:
   - GHCVER=7.6.3
   - GHCVER=7.8.3
+  - GHCVER=7.10.1
+
+ matrix:
+  allow_failures:
+    - env: GHCVER=7.10.1
 
 before_install:
   - curl --silent --location https://github.com/groonga/groonga/raw/master/data/travis/setup.sh | sh
