--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,20 @@
 language: haskell
 
 env:
-  - GHCVER=7.6.3
-  - GHCVER=7.8.3
-  - GHCVER=7.10.1
+  - GHCVER=7.6.3 CABALVER=1.18
+  - GHCVER=7.8.4 CABALVER=1.18
+  - GHCVER=7.10.1 CABALVER=1.22
 
 matrix:
   allow_failures:
-    - env: GHCVER=7.10.1
+    - env: GHCVER=7.10.1 CABALVER=1.22
 
 before_install:
   - curl --silent --location https://github.com/groonga/groonga/raw/master/data/travis/setup.sh | sh
   - sudo add-apt-repository -y ppa:hvr/ghc
   - sudo apt-get update
-  - sudo apt-get install -y -qq cabal-install-1.18 ghc-$GHCVER
-  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/1.18/bin:$PATH
+  - sudo apt-get install -y -qq cabal-install-$CABALVER ghc-$GHCVER
+  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
 
 install:
   - cabal sandbox init
