--- a/haroonga-httpd.cabal
+++ b/haroonga-httpd.cabal
@@ -19,7 +19,8 @@ executable haroonga-httpd
   main-is:             Main.hs
   other-modules:       Web.Groonga.Server
                        Web.Groonga.App
-  default-extensions:  OverloadedStrings
+  default-extensions:  OverloadedStrings,
+                       CPP
   build-depends:       base                 >= 4.6     && < 5
                      , directory            >= 1.2     && < 1.3
                      , time                 >= 1.4     && < 1.6
